--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
+    "my-app": "file:",
+    "react": "^18.2.0",
     "react-native": "0.74.5",
-    "react-native-vision-camera": "^4.5.2"
+    "react-native-vision-camera": "^4.5.2",
+    "expo-av": "~14.0.7",
+    "expo-media-library": "~16.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
